--- a/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
+++ b/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
@@ -1,7 +1,47 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="ba.unsa.etf.rpr.tutorijal05.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.tutorijal05.Controller">
+   <columnConstraints>
+      <ColumnConstraints />
+      <ColumnConstraints />
+      <ColumnConstraints />
+      <ColumnConstraints />
+      <ColumnConstraints />
+      <ColumnConstraints />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+   </rowConstraints>
+   <children>
+      <Button mnemonicParsing="false" text="1" GridPane.rowIndex="4" />
+      <Button mnemonicParsing="false" text="2" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+      <Button mnemonicParsing="false" text="3" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+      <Button mnemonicParsing="false" text="4" GridPane.rowIndex="3" />
+      <Button mnemonicParsing="false" text="7" GridPane.rowIndex="2" />
+      <Button mnemonicParsing="false" text="8" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+      <Button mnemonicParsing="false" text="5" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+      <Button mnemonicParsing="false" text="9" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+      <Button mnemonicParsing="false" text="6" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+      <Button mnemonicParsing="false" text="+" GridPane.columnIndex="5" GridPane.rowIndex="2" GridPane.rowSpan="2" />
+      <Button mnemonicParsing="false" text="\%" GridPane.rowIndex="1" />
+      <Button mnemonicParsing="false" text="/" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+      <Button mnemonicParsing="false" text="x" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+      <Button mnemonicParsing="false" text="-" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+      <Button mnemonicParsing="false" text="0" GridPane.columnSpan="2" GridPane.rowIndex="6" />
+      <Button mnemonicParsing="false" text="." GridPane.columnIndex="4" GridPane.rowIndex="6" />
+      <Button mnemonicParsing="false" text="=" GridPane.columnIndex="5" GridPane.rowIndex="4" GridPane.rowSpan="2" />
+      <Label text="Label" GridPane.columnIndex="1" GridPane.columnSpan="5" />
+   </children>
 </GridPane>
