--- a/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
+++ b/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
@@ -8,15 +8,15 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="center" hgap="5" vgap="5" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.tutorijal05.Controller">
+<GridPane alignment="center" hgap="5" prefHeight="250" prefWidth="180" vgap="5" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.tutorijal05.Controller">
     <stylesheets>
         <URL value="@digitron.css" />
     </stylesheets>
     <columnConstraints>
-      <ColumnConstraints hgrow="ALWAYS" />
-      <ColumnConstraints hgrow="ALWAYS" />
-      <ColumnConstraints fillWidth="false" hgrow="ALWAYS" />
-      <ColumnConstraints hgrow="ALWAYS" />
+      <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="25.0" />
+      <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="25.0" />
+      <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="25.0" />
+      <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="25.0" />
    </columnConstraints>
    <rowConstraints>
       <RowConstraints vgrow="ALWAYS" />
@@ -25,27 +25,77 @@
       <RowConstraints vgrow="ALWAYS" />
       <RowConstraints vgrow="ALWAYS" />
       <RowConstraints vgrow="ALWAYS" />
-      <RowConstraints vgrow="ALWAYS" />
    </rowConstraints>
    <children>
-      <Button mnemonicParsing="false" text="1" GridPane.rowIndex="4" />
-      <Button mnemonicParsing="false" text="2" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-      <Button mnemonicParsing="false" text="3" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-      <Button mnemonicParsing="false" text="4" GridPane.rowIndex="3" />
-      <Button mnemonicParsing="false" text="7" GridPane.rowIndex="2" />
-      <Button mnemonicParsing="false" text="8" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <Button mnemonicParsing="false" text="5" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <Button mnemonicParsing="false" text="9" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-      <Button mnemonicParsing="false" text="6" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-      <Button mnemonicParsing="false" text="+" GridPane.columnIndex="3" GridPane.rowIndex="2" GridPane.rowSpan="2" />
-      <Button mnemonicParsing="false" text="\%" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-      <Button mnemonicParsing="false" text="/" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      <Button mnemonicParsing="false" text="x" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-      <Button mnemonicParsing="false" text="-" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-      <Button mnemonicParsing="false" text="0" GridPane.columnSpan="2" GridPane.rowIndex="6" />
-      <Button mnemonicParsing="false" text="." GridPane.columnIndex="2" GridPane.rowIndex="6" />
-      <Button mnemonicParsing="false" text="=" GridPane.columnIndex="3" GridPane.rowIndex="4" GridPane.rowSpan="2" />
-      <TextField fx:id="Polje" styleClass="textFieldStil" text="" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.valignment="CENTER">
+      <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBrojClick" text="1" GridPane.columnIndex="0" GridPane.rowIndex="4">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding></Button>
+      <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBrojClick" text="2" GridPane.columnIndex="1" GridPane.rowIndex="4">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding></Button>
+      <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBrojClick" prefHeight="0.0" text="3" GridPane.columnIndex="2" GridPane.rowIndex="4">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding></Button>
+      <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBrojClick" text="4" GridPane.columnIndex="0" GridPane.rowIndex="3">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding></Button>
+      <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBrojClick" text="7" GridPane.columnIndex="0" GridPane.rowIndex="2">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding></Button>
+      <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBrojClick" text="8" GridPane.columnIndex="1" GridPane.rowIndex="2">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding></Button>
+      <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBrojClick" text="5" GridPane.columnIndex="1" GridPane.rowIndex="3">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding></Button>
+      <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBrojClick" prefHeight="27.0" prefWidth="0.0" text="9" GridPane.columnIndex="2" GridPane.rowIndex="2">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding></Button>
+      <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBrojClick" prefHeight="27.0" prefWidth="37.0" text="6" GridPane.columnIndex="2" GridPane.rowIndex="3">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding></Button>
+      <Button maxHeight="Infinity" maxWidth="Infinity" onAction="#btnOperacijaClick" text="+" GridPane.columnIndex="3" GridPane.rowIndex="2" GridPane.rowSpan="2">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding></Button>
+      <Button maxWidth="Infinity" onAction="#btnOperacijaClick" text="\%" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding></Button>
+      <Button maxWidth="Infinity" onAction="#btnOperacijaClick" text="/" GridPane.columnIndex="1" GridPane.rowIndex="1">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding></Button>
+      <Button maxWidth="Infinity" onAction="#btnOperacijaClick" text="x" GridPane.columnIndex="2" GridPane.rowIndex="1">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding></Button>
+      <Button maxWidth="Infinity" onAction="#btnOperacijaClick" text="-" GridPane.columnIndex="3" GridPane.rowIndex="1">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding></Button>
+      <Button maxWidth="Infinity" onAction="#btnBrojClick" text="0" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="5">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding></Button>
+      <Button maxWidth="Infinity" onAction="#btnBrojClick" text="." GridPane.columnIndex="2" GridPane.rowIndex="5">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding></Button>
+      <Button maxHeight="Infinity" maxWidth="Infinity" onAction="#btnEnterClick" text="=" GridPane.columnIndex="3" GridPane.rowIndex="4" GridPane.rowSpan="2">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding></Button>
+      <TextField fx:id="Polje" prefHeight="27.0" prefWidth="0.0" styleClass="textFieldStil" text="${controller.username}" GridPane.columnIndex="0" GridPane.columnSpan="4">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></TextField>
