--- a/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
+++ b/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
@@ -3,7 +3,7 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -27,78 +27,78 @@
       <RowConstraints vgrow="ALWAYS" />
    </rowConstraints>
    <children>
-      <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBrojClick" text="1" GridPane.columnIndex="0" GridPane.rowIndex="4">
+      <Button fx:id="btn1" maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBroj1" text="1" GridPane.columnIndex="0" GridPane.rowIndex="4">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBrojClick" text="2" GridPane.columnIndex="1" GridPane.rowIndex="4">
+      <Button fx:id="btn2" maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBroj2" text="2" GridPane.columnIndex="1" GridPane.rowIndex="4">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBrojClick" prefHeight="0.0" text="3" GridPane.columnIndex="2" GridPane.rowIndex="4">
+      <Button fx:id="btn3" maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBroj3" prefHeight="0.0" text="3" GridPane.columnIndex="2" GridPane.rowIndex="4">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBrojClick" text="4" GridPane.columnIndex="0" GridPane.rowIndex="3">
+      <Button fx:id="btn4" maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBroj4" text="4" GridPane.columnIndex="0" GridPane.rowIndex="3">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBrojClick" text="7" GridPane.columnIndex="0" GridPane.rowIndex="2">
+      <Button fx:id="btn7" maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBroj7" text="7" GridPane.columnIndex="0" GridPane.rowIndex="2">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBrojClick" text="8" GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <Button fx:id="btn8" maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBroj8" text="8" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBrojClick" text="5" GridPane.columnIndex="1" GridPane.rowIndex="3">
+      <Button fx:id="btn5" maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBroj5" text="5" GridPane.columnIndex="1" GridPane.rowIndex="3">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBrojClick" prefHeight="27.0" prefWidth="0.0" text="9" GridPane.columnIndex="2" GridPane.rowIndex="2">
+      <Button fx:id="btn9" maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBroj9" prefHeight="27.0" prefWidth="0.0" text="9" GridPane.columnIndex="2" GridPane.rowIndex="2">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBrojClick" prefHeight="27.0" prefWidth="37.0" text="6" GridPane.columnIndex="2" GridPane.rowIndex="3">
+      <Button fx:id="btn6" maxWidth="Infinity" mnemonicParsing="false" onAction="#btnBroj6" prefHeight="27.0" prefWidth="37.0" text="6" GridPane.columnIndex="2" GridPane.rowIndex="3">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button maxHeight="Infinity" maxWidth="Infinity" onAction="#btnOperacijaClick" text="+" GridPane.columnIndex="3" GridPane.rowIndex="2" GridPane.rowSpan="2">
+      <Button fx:id="plusBtn" maxHeight="Infinity" maxWidth="Infinity" onAction="#btnOperacijaPlus" text="+" GridPane.columnIndex="3" GridPane.rowIndex="2" GridPane.rowSpan="2">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button maxWidth="Infinity" onAction="#btnOperacijaClick" text="\%" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+      <Button maxWidth="Infinity" onAction="#btnOperacijaPosto" text="\%" GridPane.rowIndex="1" GridPane.valignment="CENTER">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button maxWidth="Infinity" onAction="#btnOperacijaClick" text="/" GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <Button maxWidth="Infinity" onAction="#btnOperacijaDijeljenje" text="/" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button maxWidth="Infinity" onAction="#btnOperacijaClick" text="x" GridPane.columnIndex="2" GridPane.rowIndex="1">
+      <Button maxWidth="Infinity" onAction="#btnOperacijaPuta" text="x" GridPane.columnIndex="2" GridPane.rowIndex="1">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button maxWidth="Infinity" onAction="#btnOperacijaClick" text="-" GridPane.columnIndex="3" GridPane.rowIndex="1">
+      <Button fx:id="minusBtn" maxWidth="Infinity" onAction="#btnOperacijaMinus" text="-" GridPane.columnIndex="3" GridPane.rowIndex="1">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button maxWidth="Infinity" onAction="#btnBrojClick" text="0" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="5">
+      <Button fx:id="btn0" maxWidth="Infinity" onAction="#btnBroj0" text="0" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="5">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button maxWidth="Infinity" onAction="#btnBrojClick" text="." GridPane.columnIndex="2" GridPane.rowIndex="5">
+      <Button maxWidth="Infinity" onAction="#btnTacka" text="." GridPane.columnIndex="2" GridPane.rowIndex="5">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Button maxHeight="Infinity" maxWidth="Infinity" onAction="#btnEnterClick" text="=" GridPane.columnIndex="3" GridPane.rowIndex="4" GridPane.rowSpan="2">
+      <Button fx:id="equalsBtn" maxHeight="Infinity" maxWidth="Infinity" onAction="#btnJednako" text="=" GridPane.columnIndex="3" GridPane.rowIndex="4" GridPane.rowSpan="2">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <TextField fx:id="Polje" prefHeight="27.0" prefWidth="0.0" styleClass="textFieldStil" text="${controller.username}" GridPane.columnIndex="0" GridPane.columnSpan="4">
+      <Label fx:id="display" styleClass="labelStil" text="${controller.broj1}" GridPane.columnIndex="0" GridPane.columnSpan="4">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </padding></TextField>
+         </padding></Label>
    </children>
    <padding>
       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
