--- a/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
+++ b/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="center" hgap="5" prefHeight="250" prefWidth="180" vgap="5" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.tutorijal05.Controller">
+<GridPane fx:controller="ba.unsa.etf.rpr.tutorijal05.Controller" alignment="center" hgap="5" prefHeight="250" prefWidth="180" vgap="5" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" >
     <stylesheets>
         <URL value="@digitron.css" />
     </stylesheets>
@@ -95,7 +95,7 @@
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Label fx:id="display" maxHeight="Infinity" maxWidth="Infinity" styleClass="labelStil" text ="${controller.number1}" GridPane.columnIndex="0" GridPane.columnSpan="4">
+      <Label fx:id="display" maxHeight="Infinity" maxWidth="Infinity" styleClass="labelStil" text ="${controller.broj1}" GridPane.columnIndex="0" GridPane.columnSpan="4">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Label>
