--- a/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
+++ b/src/ba/unsa/etf/rpr/tutorijal05/digitron.fxml
@@ -95,7 +95,7 @@
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Button>
-      <Label fx:id="display" maxHeight="Infinity" maxWidth="Infinity" styleClass="labelStil" text ="${controller.broj1}" GridPane.columnIndex="0" GridPane.columnSpan="4">
+      <Label fx:id="display" text ="${controller.broj1}" maxHeight="Infinity" maxWidth="Infinity" styleClass="labelStil" GridPane.columnIndex="0" GridPane.columnSpan="4">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding></Label>
